--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="inicio" class="hero">
       <div class="hero-text">
         <span class="subtitle">Nail Care & Art</span>
-        <h2>Tu estilo, <br>tus reglas.</h2>
+        <h2>Tu estilo, <br>tus reglas</h2>
         <p>Especialistas en manicura acrílica y permanente. Creamos arte en tus manos con la delicadeza que mereces.</p>
         <a href="#pedir-cita" class="cta-button">Reservar ahora</a>
       </div>
