--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="galeria-fotos">
         <img src="fotos/manicura2.jpeg" alt="Trabajo 1">
         <img src="fotos/manicura3.jpeg" alt="Trabajo 2">
-        <img src="fotos/manicura4.jpeg" alt="Trabajo 3">
+        <img src="fotos/WhatsApp Image 2026-01-29 at 16.35.59.jpeg" alt="Trabajo 3">
       </div>
     </section>
 
