--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <section id="precios">
       <h2 class="section-title">Tarifas</h2>
-      <img src="fotos/Captura de pantalla 2026-01-29 120758.png" alt="Tarifas" class="img-info">
+      <img src="fotos/WhatsApp Image 2026-01-29 at 13.56.46.jpeg" alt="Tarifas" class="img-info">
     </section>
 
     <section id="galeria">
